@@ -1,3 +1,7 @@
+2004-10-31  Philippe Gerum  <rpm@xenomai.org>
+
+	* include/nucleus/heap.h (xnheap_t): Add arch-dependent block.
+
 2004-10-30  Philippe Gerum  <rpm@xenomai.org>
 
 	* nucleus/queue.c: Add message queue support.
